릴리즈 노트 추가

--- a/index.mdx
+++ b/index.mdx
@@ -3,7 +3,28 @@ title: 릴리즈 노트
 description: "체커블에 업데이트된 기능들을 안내해드려요 📢"
 ---
 
-<Update label="2025-06-18" description="v0.0.4">
+<Update label="2025-07-28" >
+## 마감 시 스레드 잠금 기능 추가
+
+- 챌린지 마감 후 디스코드 스레드를 자동으로 잠금하여 추가 글 작성 및 수정을 제한해요.
+- 어뷰징 방지 및 관리 편의성 향상을 위한 기능이에요.
+- 현재 운영 중인 챌린지에도 적용 가능하며, 설정 변경 시 전일 챌린지부터 적용돼요.
+
+</Update>
+
+<Update label="2025-07-23" >
+## 비공개 채널 자동 접근 기능
+
+- 이제 봇이 비공개 채널에 자동으로 입장할 수 있어요.
+- 기존에는 채널을 비공개로 변경할 때 봇 접근 권한을 수동으로 설정해야 했지만, 이제 챌린지 채널에 봇의 접근 권한이 없을 경우 자동으로 입장돼요.
+- **재연동 필요**: 이 기능을 사용하려면 디스코드와 체커블을 다시 연동해주세요.
+    1. 체커블에 로그인
+    2. 왼쪽 메뉴에서 '설정' 클릭
+    3. 설정 페이지에서 '디스코드 서버 재연동' 버튼 클릭
+
+</Update>
+
+<Update label="2025-06-18" >
 ## 챌린지 운영 요일 선택 추가
 
 - 주간 목표 인증 횟수와 운영 요일은 서로 연관이 있어요.
@@ -11,7 +32,7 @@ description: "체커블에 업데이트된 기능들을 안내해드려요 📢"
 
 </Update>
 
-<Update label="2025-06-10" description="v0.0.3">
+<Update label="2025-06-10" >
 ## 챌린지에 기능 추가
 
 - 주간모드
@@ -20,18 +41,17 @@ description: "체커블에 업데이트된 기능들을 안내해드려요 📢"
 
 </Update>
 
-<Update label="2025-05-19" description="v0.0.2">
+<Update label="2025-05-19" >
 ## 챌린지 수정 기능 추가
 
 - 챌린지기 시작되면 시작일을 변경할 수 없어요.
 - 챌린지가 종료되면 수정할 수 없어요.
 - 채널은 변경할 수 없어요.
-
 </Update>
 
-<Update label="2025-05-01" description="v0.0.1">
+<Update label="2025-05-01" >
 ## 워크스페이스 관리자 초대 추가
 
-워크스페이스 설정에서 초대할 관리자의 이메일 주소를 입력하고, 생성된 초대 링크로 접속하면 초대가 완료!
+워크스페이스 설정에서 초대할 관리자의 이메일 주소를 입력하고, 생성된 초대 링크로 접속하면 초대가 완료돼요!
 
 </Update>
